2009-10-06  Nick Clifton  <nickc@redhat.com>

	* po/fi.po: Updated Finnish translation.

2009-10-03  Andreas Schwab  <schwab@linux-m68k.org>

	* opc2c.c: Include "libiberty.h" and <errno.h>.
	(orig_filename): Constify.
	(dump_lines): Fix line number directive.
	(main): Set orig_filename to basename of input file.  Use
	xstrerror.

	* Makefile.am (rx-dis.lo): Remove explicit dependencies.
	($(srcdir)/rx-decode.c): Use @MAINT@.  Use $(EXEEXT_FOR_BUILD)
	instead of $(EXEEXT).
	(opc2c$(EXEEXT_FOR_BUILD)): Renamed from opc2c$(EXEEXT) and use
	$(LINK_FOR_BUILD).  Link with libiberty.
	(MOSTLYCLEANFILES): Add opc2c$(EXEEXT_FOR_BUILD).
	(MAINTAINERCLEANFILES): Add $(srcdir)/rx-decode.c.
	* Makefile.in: Regenerated.
	* rx-decode.c: Regenerated.

2009-10-03  Paul Reed  <paulreed@paddedcell.com>

	* arm-dis.c (print_insn): Check symtab_size not *symtab.

2009-10-02  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-opc.tbl: Drop Disp64 on jump and loop instructions.
	* i386-tbl.h: Regenerated.

2009-10-02  Peter Bergner  <bergner@vnet.ibm.com>

	* ppc-dis.c (ppc_opts): Add "476" entry.
	* ppc-opc.c (PPC476): Define.
	(powerpc_opcodes): Update mnemonics where required for 476.

2009-10-01  Peter Bergner  <bergner@vnet.ibm.com>

	* ppc-opc.c (PPCA2): Use renamed mask PPC_OPCODE_A2.
	* ppc-dis.c (ppc_opts): Likewise.
	Rename "ppca2" to "a2".

2009-10-01  M R Swami Reddy <MR.Swami.Reddy@nsc.com>

	* crx-dis.c (match_opcode): Truncate mcode to 32-bit.

2009-09-29  DJ Delorie  <dj@redhat.com>

	* Makefile.am: Add RX files.
	* configure.in: Add support for RX target.
	* disassemble.c: Likewise.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* opc2c.c: New file.
	* rx-decode.c: New file.
	* rx-decode.opc: New file.
	* rx-dis.c: New file.

2009-09-29  Peter Bergner  <bergner@vnet.ibm.com>

	* ppc-opc.c (powerpc_opcodes): Remove support for the the "lxsdux",
	"lxvd2ux", "lxvw4ux", "stxsdux", "stxvd2ux" and "stxvw4ux" opcodes.

2009-09-25  Michael Eager  <eager@eagercon.com>
